src/test/ui/issues/issue-50264-inner-deref-trait/result-as_deref_ok.stderr
error[E0599]: no method named `as_deref_ok` found for type `std::result::Result<{integer}, _>` in the current scope
  --> $DIR/result-as_deref_ok.rs:4:27
   |
LL |     let _result = &Ok(42).as_deref_ok();
   |                           ^^^^^^^^^^^ help: there is a method with a similar name: `as_deref_err`
   |
   = note: the method `as_deref_ok` exists but the following trait bounds were not satisfied:
           `{integer} : std::ops::Deref`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
